--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Evitamos que se cree nuevamente el esquema en la base de datos
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 # Desactivamos Tomcat ya que no subiremos esta aplicacion
 spring.main.web-application-type=none
