Cambio de datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Configuraciones para comenzar el proyecto
 # Conexion a MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/estudiantes_db
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.username=none
+spring.datasource.password=none
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Evitamos que se cree nuevamente el esquema en la base de datos
 spring.jpa.hibernate.ddl-auto=none
